# 3ds_debugger

./: .gitignore  .gitmodules  CMakeLists.txt
debugger/source/: main.cpp
debugger_daemon/: CMakeLists.txt  debugger_daemon.rsf
debugger_daemon/source/: logger.cpp  logger.h  main.cpp  network_manager.cpp  network_manager.h  system.c  utils.h
debugger_poc/: CMakeLists.txt  Makefile  debugger.smdh
debugger_poc/source/: main.cpp
dummy_process/: CMakeLists.txt  Makefile  dummy_process.rsf  dummy_process.smdh
dummy_process/source/: main.cpp
